alignment and fixing form labels on settings

--- a/react-app/src/components/Main.css
+++ b/react-app/src/components/Main.css
@@ -57,6 +57,7 @@ ul li {
     display: flex;
     justify-content: space-around;
     margin-bottom: 1.5%;
+    overflow-x: scroll;
 }
 
 .create-theme-container {
