--- a/react-app/src/components/Settings_Page/Settings_Page.css
+++ b/react-app/src/components/Settings_Page/Settings_Page.css
@@ -78,7 +78,7 @@
     display: flex;
     flex-direction: column;
     gap: 7%;
-    margin: 0.75%;
+    margin: 2%;
 }
 
 .font-family-setter-div select[data-input-name='Font Family'] { text-align: center }
